
2016-07-15 Brian Tiffin <btiffin@gnu.org>

	* codegen.c: correction to exception code tested for ACCEPT ON EXCEPTION

2016-07-10  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, scanner.l, tree.h: fixed bug #270 by only returning
	  PROGRAM_NAME's from scanner inside the identification division.

2016-07-06  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: fixed bug #264, where fields of category CB_CATEGORY_UNKNOWN
	  were rejected in the AT clause despite being numeric (or having only
	  numeric children).
	* typeck.c (valid_screen_pos): removed extension to AT clause where less
	  than 4 digits was permitted (I'd added this because I thought leading
	  zeroes were truncated from literals).

2016-06-30  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l (is_condition_directive_clause): fixed bug #263 where >>IF's
	  where not detected inside false >>IF's.

2016-06-29  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, cobc.h: Added comments to functions, improved names where possible and
	  fixed style issues (see below).
	* cobc.c (print_replace_main): Made cb_inreplace a static variable
	  in_replace. Also split code into new functions free_replace_list and
	  copy_list_replace.

2016-06-28  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Fixed mystery edits that broke FILE and FILLER listing.

2016-06-27  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1): fixed bug #260, where + or - in PIC was
	  mistaken for S.

2016-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (codegen): renamed parameter nested to subsequent_call
	  removing the confusing title (for nested check nested_level)

2016-06-26  Dave Pitts <dpitts@cozx.com>

	* cobc.c, cobc.h, pplex.l, ppparse.y: Added LISTING ON/OFF directive.

2016-06-26  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c: lengthened variable names, fixed style issues (see below, also
	  replacing while loops with for where appropriate) and simplified and